--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^0.0.60",
+		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -23,6 +24,7 @@
 		"lucide-react": "^0.441.0",
 		"next": "14.2.12",
 		"react": "^18",
+		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"react-markdown": "^9.0.1",
@@ -35,6 +37,7 @@
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
+		"@types/react-beautiful-dnd": "^13.1.8",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.12",
